sysyruntimelibrary-master/functional_test/29_while_test3.err
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/29_while_test3.sy:54:21: error: syntax error, unexpected R_PARENTHESIS
54|   return EightWhile()
  |                      ^
before semantic ast:
 decList()
/mnt/e/workspace_clion/compiler_2020/sysyruntimelibrary-master/functional_test/29_while_test3.sy:0:0: error: not find main function
